@@ -1,6 +1,8 @@
 QXmpp 0.6.4 (UNRELEASED)
 ------------------------
 
+  - Improve vCard support:
+    * Make it possible to have several e-mail addresses.
   - Make it possible to set the client's extended information form (XEP-0128).
   - Fix XEP-0115 verification strings (remove duplicate features, sort form values)
   - Fix issues:
